# corsair2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.gateway  docker-compose.yml  requirements.txt
config/: corsair_v2_config.yaml  hg_v1_4_paper.yaml  runtime_v3.yaml
docs/: HANDOFF_BAREMETAL_MIGRATION.md  ethusdrr_spec_v4.md  hg_spec_v1.2.md  hg_spec_v1.4.md
docs/architecture/: rust_runtime_v3.md
docs/archive/: hg_spec_v1.1.md  hg_spec_v1.3.md  latency_decomp_plan.md  mm_service_split.md  phase6_roadmap.md
docs/briefs/: btc_leads_eth_informed_mm_2026-04-28.md
rust/: Cargo.toml
rust/corsair_broker/: Cargo.toml
rust/corsair_broker/src/: ipc.rs  lib.rs  main.rs  runtime.rs  subscriptions.rs  tasks.rs
rust/corsair_broker_api/: Cargo.toml
rust/corsair_broker_api/src/: capabilities.rs  contract.rs  error.rs  events.rs  lib.rs  mock.rs  orders.rs  position.rs  tick.rs
rust/corsair_broker_ibkr/src/: bridge.rs
rust/corsair_broker_ibkr/tests/: integration.rs
rust/corsair_broker_ibkr_native/: Cargo.toml
rust/corsair_broker_ibkr_native/examples/: account_smoke.rs  wire_dump.rs
rust/corsair_broker_ibkr_native/src/: broker.rs  client.rs  codec.rs  decoder.rs  lib.rs  place_template.rs
rust/corsair_constraint/: Cargo.toml
rust/corsair_constraint/src/: checker.rs  gates.rs  lib.rs
rust/corsair_ipc/: Cargo.toml
rust/corsair_ipc/src/: client.rs  lib.rs  protocol.rs  ring.rs  server.rs
rust/corsair_market_data/: Cargo.toml
rust/corsair_market_data/src/: atm.rs  lib.rs  option_state.rs  state.rs  view.rs
rust/corsair_oms/: Cargo.toml
rust/corsair_oms/src/: book.rs  decision.rs  key.rs  lib.rs
rust/corsair_position/: Cargo.toml
rust/corsair_position/src/: aggregation.rs  fill.rs  lib.rs  market_view.rs  portfolio.rs  position.rs
rust/corsair_pricing/: Cargo.toml  pyproject.toml
rust/corsair_pricing/src/: greeks.rs  lib.rs  span.rs
rust/corsair_risk/: Cargo.toml
rust/corsair_risk/src/: kill.rs  lib.rs  monitor.rs  sentinel.rs
rust/corsair_snapshot/: Cargo.toml
rust/corsair_snapshot/src/: lib.rs  payload.rs  publisher.rs
rust/corsair_trader/: Cargo.toml
rust/corsair_trader/src/: decision.rs  jsonl.rs  main.rs  messages.rs  pricing.rs  state.rs
rust/corsair_trader/src/ipc/: mod.rs  protocol.rs  shm.rs
scripts/: amend_latency_probe.py  dashboard.py  dashboard_chain.py  dashboard_style.py  dual_tick_capture.py  flatten.py  flatten_positions.py  gateway_run.sh  induce_burst.py  induce_kill_switch.py  parity_compare.py  peer_cap_session_analysis.py  reconcile_positions.py  rust_trader_parity.py  simulate_latency.py  test_thread3_stage0.py  totp_helper.sh
src/: broker_ipc.py  config.py  connection.py  constraint_checker.py  daily_state.py  daily_summary.py  discord_notify.py  fill_handler.py  greeks.py  hedge_manager.py  logging_utils.py  main.py  market_data.py  operational_kills.py  position_manager.py  pricing.py  quote_engine.py  quote_engine_helpers.py  risk_monitor.py  sabr.py  snapshot.py  startup_checks.py  synthetic_span.py  utils.py  watchdog.py  weekend.py
src/ipc/: __init__.py  client.py  protocol.py  server.py  shm.py
src/trader/: __init__.py  main.py  quote_decision.py
tests/: conftest.py  test_decide_quote.py  test_greeks_span_parity.py  test_ipc_protocol.py  test_operational_kills.py  test_pricing_parity.py  test_quote_engine.py  test_risk_monitor.py  test_sabr.py  test_thread3.py
