[workspace]
members = [
    "corsair_broker_api",
    "corsair_broker_ibkr",
    "corsair_constraint",
    "corsair_hedge",
    "corsair_market_data",
    "corsair_oms",
    "corsair_position",
    "corsair_pricing",
    "corsair_risk",
    "corsair_snapshot",
    "corsair_trader",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
