[package]
name = "corsair_broker"
version = "0.1.0"
edition = "2021"
description = "Rust runtime broker daemon — wires Phases 2-3 into a single process. Replaces today's Python corsair-corsair service."

[[bin]]
name = "corsair_broker"
path = "src/main.rs"

[lib]
name = "corsair_broker"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
corsair_broker_api = { path = "../corsair_broker_api" }
corsair_broker_ibkr = { path = "../corsair_broker_ibkr" }
corsair_broker_ibkr_native = { path = "../corsair_broker_ibkr_native" }
corsair_constraint = { path = "../corsair_constraint" }
corsair_hedge = { path = "../corsair_hedge" }
corsair_ipc = { path = "../corsair_ipc" }
corsair_market_data = { path = "../corsair_market_data" }
corsair_oms = { path = "../corsair_oms" }
corsair_position = { path = "../corsair_position" }
corsair_pricing = { path = "../corsair_pricing" }
corsair_risk = { path = "../corsair_risk" }
corsair_snapshot = { path = "../corsair_snapshot" }
env_logger = "0.11"
log = "0.4"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
