[package]
name = "corsair_broker_api"
version = "0.1.0"
edition = "2021"
description = "Broker abstraction trait for Corsair v3. Implementations: corsair_broker_ibkr (IBKR API), corsair_broker_ilink (FCM/iLink, future)."

[lib]
name = "corsair_broker_api"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
