[package]
name = "corsair_ipc"
version = "0.1.0"
edition = "2021"
description = "Shared SHM ring + FIFO IPC between corsair_broker and corsair_trader."

[lib]
name = "corsair_ipc"

[dependencies]
libc = "0.2"
log = "0.4"
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs"] }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"
