[package]
name = "corsair_position"
version = "0.1.0"
edition = "2021"
description = "PortfolioState — position book, Greek aggregation, MTM P&L. Foundation for risk/constraint/hedge."

[lib]
name = "corsair_position"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
corsair_broker_api = { path = "../corsair_broker_api" }
corsair_pricing = { path = "../corsair_pricing" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
