[package]
name = "corsair_risk"
version = "0.1.0"
edition = "2021"
description = "Kill switches, induced sentinels, daily P&L halt. Mirrors src/risk_monitor.py."

[lib]
name = "corsair_risk"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
corsair_broker_api = { path = "../corsair_broker_api" }
corsair_position = { path = "../corsair_position" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
