[package]
name = "corsair_trader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "corsair_trader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "sync", "fs", "net"] }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs", "ioctl", "uio", "poll"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
statrs = "0.17"
ahash = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
